package com.essai.cabinet.model;

public enum Role {
    ADMIN,
    PATIENT,
    DOCTOR
}
